[package]
name = "microstatus"
version = "0.0.2-dev"
description = "Lightweight Mastodon- and GNU social-compatible OStatus server implementation"

authors = ["Jérémie Roquet <jroquet@arkanosis.net>"]

documentation = "https://github.com/Arkanosis/microstatus"
homepage = "https://github.com/Arkanosis/microstatus"
repository = "https://github.com/Arkanosis/microstatus"

readme = "README.md"
license = "ISC"

keywords = ["microblog", "ostatus", "mastodon", "gnu-social", "social-network"]
categories = ["command-line-utilities"]

[dependencies]
docopt = "0.7"
rustc-serialize = "0.3"
